2003-03-19  Jacob Perkins  <jap1@users.sourceforge.net>

	* src/Makefile.am: Patched to make freebsd-alpha port build.
	From: Akifyev Sergey <asa@gascom.ru>, Joe Marcus Clarke <marcus@freebsd.org>,
	Kris Kennaway <kris@obsecurity.org>
	* seahorse-key-store: Added ::get_key_from_model
	* seahorse-recipients: Simplified using seahorse_key_store_get_key_from_model,
	can use for recipients ops again

2003-03-18  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties: Make uid and entire notebook scrollable and have popup
	* seahorse-recipients: Can do multiple selection and every key at once

2003-03-14  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-widget: Updated internal hash to use seahorse_key_get_id()
	* seahorse-widget: Don't connect progress callback for key-manager
	* seahorse-key-manager: Only operations and key-list insensitive during progress,
	fixes bug 108386
	* seahorse-key: Format fingerprint, addresses bug 108306

2003-03-13  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse.schemas.in: Added missing column visibility schemas
	* seahorse-validity: Added DISABLED and REVOKED, removed sort function
	* seahorse-key-manager-store: Added Validity and Expires columns,
	added int columns to sort string columns
	* seahorse-preferences: Added toggles for Validity and Expires columns
	* seahorse-key: Added Disabled and Revoked options to ::get_validity
	* seahorse-encrypt-recipients-store: Updated to remove use of custom
	validity sort

2003-03-12  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-passphrase: Added change passphrase glade dialog & function
	to address bug 107408
	* seahorse-ops-key: Updated ::change_passphrase to use new dialog

2003-03-11  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context:
	* main:
	Moved gpgme_set_passphrase_cb from main to context::init
	* seahorse-passphrase: Created glade file, updated function to use,
	now prettier, addresses bug 107406
