@@ -137,5 +137,19 @@
 				'default', 'both', 'both_horiz', 'icons', and 'text'.</long>
 			</locale>
 		</schema>
+		<schema>
+			<key>/schemas/apps/seahorse/recipients/validity_threshold</key>
+			<applyto>/apps/seahorse/recipients/validity_threshold</applyto>
+			<owner>seahorse</owner>
+			<type>int</type>
+			<default>10</default>
+			<locale name="C">
+				<short>Threshold for asking about validity</short>
+				<long>For encryption recipients, if more keys than
+				the threshold are selected, only one dialog will
+				be used to confirm validity. Otherwise the user
+				must confirm the validity for each key.</long>
+			</locale>
+		</schema>
 	</schemalist>
 </gconfschemafile>
