@@ -20,15 +20,17 @@
  */
 
 #include <gnome.h>
+#include <eel/eel.h>
 
 #include "seahorse-recipients.h"
 #include "seahorse-widget.h"
 #include "seahorse-ops-key.h"
 #include "seahorse-validity.h"
 #include "seahorse-encrypt-recipients-store.h"
+#include "seahorse-preferences.h"
 
 #define ALL "all_keys"
-#define RECIPIENTS "recipient_keys"
+#define RECIPS "recipient_keys"
 
 enum {
 	PROP_0,
@@ -36,7 +38,6 @@ enum {
 };
 
 static void	seahorse_recipients_class_init		(SeahorseRecipientsClass	*klass);
-static void	seahorse_recipients_init		(SeahorseRecipients		*srecips);
 static void	seahorse_recipients_finalize		(GObject			*gobject);
 static void	seahorse_recipients_set_property	(GObject			*object,
 							 guint				prop_id,
@@ -62,8 +63,7 @@ seahorse_recipients_get_type (void)
 			(GClassInitFunc) seahorse_recipients_class_init,
 			NULL, NULL,
 			sizeof (SeahorseRecipients),
-			0,
-			(GInstanceInitFunc) seahorse_recipients_init
+			0, NULL
 		};
 		
 		recipients_type = g_type_register_static (SEAHORSE_TYPE_WIDGET,
@@ -89,14 +89,6 @@ seahorse_recipients_class_init (SeahorseRecipientsClass *klass)
 		g_param_spec_boolean ("validity", "If need validity",
 				      "TRUE if recipients need to have full validity",
 				      FALSE, G_PARAM_READWRITE));
-}
-
-/* Initialize recipient list */
-static void
-seahorse_recipients_init (SeahorseRecipients *srecips)
-{
-	if (gpgme_recipients_new (&(srecips->recips)) != GPGME_No_Error)
-		srecips->recips = NULL;
 }
 
 static void
@@ -144,16 +136,6 @@ seahorse_recipients_get_property (GObject *object, guint prop_id, GValue *value,
 }
 
 static void
-transfer (SeahorseKeyStore *lhs, SeahorseKeyStore *rhs, GtkTreePath *path)
-{
-	SeahorseKey *skey;
-	
-	skey = seahorse_key_store_get_key_from_model (GTK_TREE_MODEL (lhs), path);
-	seahorse_key_store_remove (lhs, path);
-	seahorse_key_store_append (rhs, skey);
-}
-
-static void
 set_all_buttons (SeahorseWidget *swidget)
 {
 	SeahorseRecipients *srecips;
@@ -162,136 +144,149 @@ set_all_buttons (SeahorseWidget *swidget)
 	
 	srecips = SEAHORSE_RECIPIENTS (swidget);
 	
-	gtk_widget_set_sensitive (glade_xml_get_widget (swidget->xml, "add_all"),
-		gtk_tree_model_get_iter_first (GTK_TREE_MODEL (srecips->all_keys), &iter));
 	sensitive = gtk_tree_model_get_iter_first (GTK_TREE_MODEL (
 		srecips->recipient_keys), &iter);
-	gtk_widget_set_sensitive (glade_xml_get_widget (
-		swidget->xml, "remove_all"), sensitive);
 	gtk_widget_set_sensitive (glade_xml_get_widget (
 		swidget->xml, "ok"), sensitive);
 }
 
-/* Moves key iter from right (non-recips) to left (recips) *
-static void
-add_recip (SeahorseWidget *swidget, GtkTreePath *path)
+static gboolean
+add_recip (SeahorseWidget *swidget, SeahorseKey *skey)
 {
-	SeahorseRecipients *srecips;
-	GpgmeValidity validity;
-	GtkWidget *question;
+	SeahorseValidity validity;
+	GtkWidget *dialog;
 	gint response;
-	SeahorseKey *skey;
 	
-	srecips = SEAHORSE_RECIPIENTS (swidget);
-	skey = seahorse_key_store_get_key_from_path (GTK_TREE_VIEW (
-		glade_xml_get_widget (swidget->xml, ALL)), path);
+	/* if don't need validity check */
+	if (!SEAHORSE_RECIPIENTS (swidget)->need_validity)
+		return TRUE;
 	
-	validity = gpgme_key_get_ulong_attr (skey->key, GPGME_ATTR_VALIDITY, NULL, 0);
-	/* Check if need key to be fully valid *
-	if (srecips->need_validity && validity < GPGME_VALIDITY_FULL) {
-		question = gtk_message_dialog_new (
-			GTK_WINDOW (glade_xml_get_widget (swidget->xml, swidget->name)),
-			GTK_DIALOG_MODAL, GTK_MESSAGE_QUESTION, GTK_BUTTONS_YES_NO,
-			"%s\nis not a fully valid key.\n"
-			"Would you like to temporarily give it full validity for this operation?",
-			seahorse_key_get_userid (skey, 0));
+	validity = seahorse_key_get_validity (skey);
+	/* if is already fully valid */
+	if (validity >= SEAHORSE_VALIDITY_FULL)
+		return TRUE;
+	
+	dialog = gtk_message_dialog_new (GTK_WINDOW (glade_xml_get_widget (
+		swidget->xml, swidget->name)), GTK_DIALOG_MODAL, GTK_MESSAGE_QUESTION,
+		GTK_BUTTONS_YES_NO, _("%s is not a fully valid key."
+		" Would you like to temporarily give it full validity?"),
+		seahorse_key_get_userid (skey, 0));
 		
-		response = gtk_dialog_run (GTK_DIALOG (question));
-		gtk_widget_destroy (question);
-		
-		/* If don't want key, return *
-		if (response != GTK_RESPONSE_YES)
-			return;
-	}
-
-	seahorse_key_store_remove (srecips->all_keys, path);
-	seahorse_key_store_append (srecips->recipient_keys, skey);
+	response = gtk_dialog_run (GTK_DIALOG (dialog));
+	gtk_widget_destroy (dialog);
 	
-	if (gpgme_recipients_count (srecips->recips) == 0)
-		gtk_widget_set_sensitive (glade_xml_get_widget (swidget->xml, "ok"), TRUE);
-	
-	seahorse_ops_key_recips_add (srecips->recips, skey);
+	/* if answer yes */
+	return (response == GTK_RESPONSE_YES);
 }
 
-/* Moves key from left (recips) to right (non-recips) *
-static void
-remove_recip (SeahorseWidget *swidget, GtkTreePath *path)
+static gboolean
+add_all_recips (SeahorseWidget *swidget, gint length)
 {
-	GtkTreeModel *model;
-	GtkTreeIter iter;
-	SeahorseRecipients *srecips;
-	SeahorseKey *skey;
+	GtkWidget *dialog;
+	gint response;
 	
-	srecips = SEAHORSE_RECIPIENTS (swidget);
-	skey = seahorse_key_store_get_key_from_path (GTK_TREE_VIEW (
-		glade_xml_get_widget (swidget->xml, RECIPIENTS)), path);
-	seahorse_key_store_remove (srecips->recipient_keys, path);
-	seahorse_key_store_append (srecips->all_keys, skey);
+	g_return_val_if_fail (SEAHORSE_RECIPIENTS (swidget)->need_validity, FALSE);
+	g_return_val_if_fail (length > eel_gconf_get_integer (VALIDITY_THRESHOLD), FALSE);
 	
-	model = GTK_TREE_MODEL (srecips->recipient_keys);
+	dialog = gtk_message_dialog_new (GTK_WINDOW (glade_xml_get_widget (
+		swidget->xml, swidget->name)), GTK_DIALOG_MODAL, GTK_MESSAGE_QUESTION,
+		GTK_BUTTONS_YES_NO, _("You are about to add %d keys to the recipients list."
+		" Some of them may not be fully valid. Would you like to temporarily"
+		" give all %d keys full validity?"), length, length);
 	
-	/* Need to rebuild recipients *
-	gpgme_recipients_release (srecips->recips);
-	g_return_if_fail (gpgme_recipients_new (&(srecips->recips)) == GPGME_No_Error);
+	response = gtk_dialog_run (GTK_DIALOG (dialog));
+	gtk_widget_destroy (dialog);
 	
-	if (gtk_tree_model_get_iter_first (model, &iter)) {
-		do {
-			path = gtk_tree_model_get_path (model, &iter);
-			skey = seahorse_key_store_get_key_from_path (GTK_TREE_VIEW (
-				glade_xml_get_widget (swidget->xml, RECIPIENTS)), path);
-			seahorse_ops_key_recips_add (srecips->recips, skey);
-		} while (gtk_tree_model_iter_next (model, &iter));
-	}
-	
-	if (gpgme_recipients_count (srecips->recips) == 0)
-		gtk_widget_set_sensitive (glade_xml_get_widget (swidget->xml, "ok"), FALSE);
+	return (response == GTK_RESPONSE_YES);
 }
-*/
+
 /* Add recipient button clicked */
 static void
-add_clicked (GtkButton *button, SeahorseWidget *swidget)
-{
-	GtkTreeSelection *selection;
-	GList *list = NULL;
-	SeahorseRecipients *srecips;
+add_clicked (GtkButton *button, SeahorseRecipients *srecips)
+{	
+	GList *selected, *list;
+	SeahorseKey *skey;
 	GtkTreeView *view;
+	SeahorseWidget *swidget;
+	gboolean check_valid = FALSE;
+	gint length;
 	
+	swidget = SEAHORSE_WIDGET (srecips);
 	view = GTK_TREE_VIEW (glade_xml_get_widget (swidget->xml, ALL));
-	selection = gtk_tree_view_get_selection (view);
-	list = gtk_tree_selection_get_selected_rows (selection, NULL);
-	srecips = SEAHORSE_RECIPIENTS (swidget);
+	selected = list = gtk_tree_selection_get_selected_rows (
+		gtk_tree_view_get_selection (view), NULL);
+	length = g_list_length (list);
 	
+	check_valid = (srecips->need_validity && length > eel_gconf_get_integer (VALIDITY_THRESHOLD));
+	/* if above threshold but don't want to add */
+	if (check_valid && !add_all_recips (swidget, length)) {
+		g_list_foreach (list, (GFunc)gtk_tree_path_free, NULL);
+		g_list_free (list);
+		return;
+	}
+	
+	/* add list to rhs */
 	while (list != NULL) {
-		transfer (srecips->all_keys, srecips->recipient_keys, list->data);
-		//gtk_tree_path_free (list->data);
+		skey = seahorse_key_store_get_key_from_path (view, list->data);
+		if (!srecips->need_validity || check_valid || add_recip (swidget, skey))
+			seahorse_key_store_append (srecips->recipient_keys, skey);
+		else {
+			gtk_tree_path_free (list->data);
+			list->data = NULL;
+		}
 		list = g_list_next (list);
 	}
-	g_list_free (list);
+	/* remove list from lhs */
+	list = g_list_last (selected);
+	while (list != NULL) {
+		if (list->data != NULL) {
+			seahorse_key_store_remove (srecips->all_keys, list->data);
+			gtk_tree_path_free (list->data);
+		}
+		list = g_list_previous (list);
+	}
+	g_list_free (selected);
 	
 	set_all_buttons (swidget);
 }
 
 /* Remove recipient button clicked */
 static void
-remove_clicked (GtkButton *button, SeahorseWidget *swidget)
+remove_clicked (GtkButton *button, SeahorseRecipients *srecips)
 {
-	GtkTreeSelection *selection;
-	GList *list = NULL;
-	SeahorseRecipients *srecips;
+	GList *selected, *list;
 	GtkTreeView *view;
+	SeahorseWidget *swidget;
 	
-	view = GTK_TREE_VIEW (glade_xml_get_widget (swidget->xml, RECIPIENTS));
-	selection = gtk_tree_view_get_selection (view);
-	list = gtk_tree_selection_get_selected_rows (selection, NULL);
-	srecips = SEAHORSE_RECIPIENTS (swidget);
+	swidget = SEAHORSE_WIDGET (srecips);
+	view = GTK_TREE_VIEW (glade_xml_get_widget (swidget->xml, RECIPS));
+	selected = list = gtk_tree_selection_get_selected_rows (
+		gtk_tree_view_get_selection (view), NULL);
 	
+	/* add list to rhs */
 	while (list != NULL) {
-		transfer (srecips->recipient_keys, srecips->all_keys, list->data);
-		//gtk_tree_path_free (list->data);
+		seahorse_key_store_append (srecips->all_keys, seahorse_key_store_get_key_from_path (
+			view, list->data));
 		list = g_list_next (list);
 	}
-	g_list_free (list);
+	/* remove list from lhs */
+	list = g_list_last (selected);
+	while (list != NULL) {
+		seahorse_key_store_remove (srecips->recipient_keys, list->data);
+		gtk_tree_path_free (list->data);
+		list = g_list_previous (list);
+	}
+	g_list_free (selected);
 	
+	set_all_buttons (swidget);
+}
+
+static void
+transfer (SeahorseWidget *swidget, SeahorseKeyStore *lhs, SeahorseKeyStore *rhs,
+	  SeahorseKey *skey, GtkTreePath *path)
+{
+	seahorse_key_store_remove (lhs, path);
+	seahorse_key_store_append (rhs, skey);
 	set_all_buttons (swidget);
 }
 
@@ -300,8 +295,13 @@ static void
 add_row_activated (GtkTreeView *view, GtkTreePath *path,
 		   GtkTreeViewColumn *arg2, SeahorseRecipients *srecips)
 {
-	transfer (srecips->all_keys, srecips->recipient_keys, path);
-	set_all_buttons (SEAHORSE_WIDGET (srecips));
+	SeahorseKey *skey;
+	
+	skey = seahorse_key_store_get_key_from_model (GTK_TREE_MODEL (
+		srecips->all_keys), path);
+	if (add_recip (SEAHORSE_WIDGET (srecips), skey))
+		transfer (SEAHORSE_WIDGET (srecips), srecips->all_keys,
+			srecips->recipient_keys, skey, path);
 }
 
 /* Left (recip) key activated */
@@ -309,50 +309,44 @@ static void
 remove_row_activated (GtkTreeView *view, GtkTreePath *path,
 		      GtkTreeViewColumn *arg2, SeahorseRecipients *srecips)
 {
-	transfer (srecips->recipient_keys, srecips->all_keys, path);
-	set_all_buttons (SEAHORSE_WIDGET (srecips));
-}
-
-static gboolean
-add_all_foreach (GtkTreeModel *model, GtkTreePath *path, GtkTreeIter *iter, SeahorseWidget *swidget)
-{
-	SeahorseRecipients *srecips;
+	SeahorseKey *skey;
 	
-	srecips = SEAHORSE_RECIPIENTS (swidget);
-	transfer (srecips->all_keys, srecips->recipient_keys, path);
-	//return FALSE;
+	skey = seahorse_key_store_get_key_from_model (GTK_TREE_MODEL (
+		srecips->recipient_keys), path);
+	transfer (SEAHORSE_WIDGET (srecips), srecips->recipient_keys,
+		srecips->all_keys, skey, path);
 }
 
 static void
-add_all_clicked (GtkButton *button, SeahorseWidget *swidget)
+all_selection_changed (GtkTreeSelection *selection, SeahorseWidget *swidget)
 {
-	gtk_tree_model_foreach (GTK_TREE_MODEL (SEAHORSE_RECIPIENTS (swidget)->all_keys),
-		(GtkTreeModelForeachFunc)add_all_foreach, swidget);
-	set_all_buttons (swidget);
-}
-
-static gboolean
-remove_all_foreach (GtkTreeModel *model, GtkTreePath *path, GtkTreeIter *iter, SeahorseWidget *swidget)
-{
-	SeahorseRecipients *srecips;
+	gint count;
+	GtkStatusbar *status;
+	guint id;
 	
-	srecips = SEAHORSE_RECIPIENTS (swidget);
-	transfer (srecips->recipient_keys, srecips->all_keys, path);
-	return FALSE;
+	count = gtk_tree_selection_count_selected_rows (selection);
+	gtk_widget_set_sensitive (glade_xml_get_widget (swidget->xml, "add"),
+		count > 0);
+	status = GTK_STATUSBAR (glade_xml_get_widget (swidget->xml, "all_status"));
+	id = gtk_statusbar_get_context_id (status, "selection");
+	gtk_statusbar_pop (status, id);
+	gtk_statusbar_push (status, id, g_strdup_printf (_("Selected %d keys"), count));	
 }
 
 static void
-remove_all_clicked (GtkButton *button, SeahorseWidget *swidget)
+recips_selection_changed (GtkTreeSelection *selection, SeahorseWidget *swidget)
 {
-	gtk_tree_model_foreach (GTK_TREE_MODEL (SEAHORSE_RECIPIENTS (swidget)->recipient_keys),
-		(GtkTreeModelForeachFunc)remove_all_foreach, swidget);
-	set_all_buttons (swidget);
-}
-
-static void
-selection_changed (GtkTreeSelection *selection, GtkWidget *widget)
-{
-	gtk_widget_set_sensitive (widget, gtk_tree_selection_count_selected_rows (selection) > 0);
+	gint count;
+	GtkStatusbar *status;
+	guint id;
+	
+	count = gtk_tree_selection_count_selected_rows (selection);
+	gtk_widget_set_sensitive (glade_xml_get_widget (swidget->xml, "remove"),
+		count > 0);
+	status = GTK_STATUSBAR (glade_xml_get_widget (swidget->xml, "recips_status"));
+	id = gtk_statusbar_get_context_id (status, "selection");
+	gtk_statusbar_pop (status, id);
+	gtk_statusbar_push (status, id, g_strdup_printf (_("Selected %d keys"), count));	
 }
 
 /* Creates a new #SeahorseRecipients given @sctx and whether doing
@@ -372,20 +366,16 @@ seahorse_recipients_new (SeahorseContext *sctx, gboolean use_encrypt)
 	swidget = SEAHORSE_WIDGET (srecips);
 	
 	glade_xml_signal_connect_data (swidget->xml, "add_clicked",
-		G_CALLBACK (add_clicked), swidget);
+		G_CALLBACK (add_clicked), srecips);
 	glade_xml_signal_connect_data (swidget->xml, "remove_clicked",
-		G_CALLBACK (remove_clicked), swidget);
+		G_CALLBACK (remove_clicked), srecips);
 	glade_xml_signal_connect_data (swidget->xml, "add_row_activated",
-		G_CALLBACK (add_row_activated), swidget);
+		G_CALLBACK (add_row_activated), srecips);
 	glade_xml_signal_connect_data (swidget->xml, "remove_row_activated",
-		G_CALLBACK (remove_row_activated), swidget);
-	glade_xml_signal_connect_data (swidget->xml, "add_all_clicked",
-		G_CALLBACK (add_all_clicked), swidget);
-	glade_xml_signal_connect_data (swidget->xml, "remove_all_clicked",
-		G_CALLBACK (remove_all_clicked), swidget);
+		G_CALLBACK (remove_row_activated), srecips);
 	
 	all_keys = GTK_TREE_VIEW (glade_xml_get_widget (swidget->xml, ALL));
-	recips_keys = GTK_TREE_VIEW (glade_xml_get_widget (swidget->xml, RECIPIENTS));
+	recips_keys = GTK_TREE_VIEW (glade_xml_get_widget (swidget->xml, RECIPS));
 
 	if (use_encrypt) {
 		srecips->all_keys = seahorse_encrypt_recipients_store_new (sctx, all_keys);
@@ -401,12 +391,12 @@ seahorse_recipients_new (SeahorseContext *sctx, gboolean use_encrypt)
 	/* listen to selection change */
 	selection = gtk_tree_view_get_selection (all_keys);
 	gtk_tree_selection_set_mode (selection, GTK_SELECTION_MULTIPLE);
-	g_signal_connect_after (selection, "changed", G_CALLBACK (selection_changed),
-		glade_xml_get_widget (swidget->xml, "add"));
+	g_signal_connect_after (selection, "changed",
+		G_CALLBACK (all_selection_changed), swidget);
 	selection = gtk_tree_view_get_selection (recips_keys);
 	gtk_tree_selection_set_mode (selection, GTK_SELECTION_MULTIPLE);
-	g_signal_connect_after (selection, "changed", G_CALLBACK (selection_changed),
-		glade_xml_get_widget (swidget->xml, "remove"));
+	g_signal_connect_after (selection, "changed",
+		G_CALLBACK (recips_selection_changed), swidget);
 
 	return swidget;
 }
@@ -477,10 +467,13 @@ seahorse_recipients_run (SeahorseRecipients *srecips)
 				done = TRUE;
 				gtk_tree_model_foreach (GTK_TREE_MODEL (srecips->recipient_keys),
 					(GtkTreeModelForeachFunc)recipients_foreach, recips);
+				if (gpgme_recipients_count (recips) == 0) {
+					gpgme_recipients_release (recips);
+					recips = NULL;
+				}
 				break;
 			default:
 				gpgme_recipients_release (recips);
-				srecips->recips = NULL;
 				done = TRUE;
 				break;
 		}
