@@ -14,6 +14,7 @@ seahorse 0.7.2
 	and each column is sortable
 	* Main window not completely insensitive during progress and startup
 	* Key Properties shows a formatted fingerprint, tabs are scrollable
+	* Recipients allows multiple selection
 
 seahorse 0.7.1
 --------------
