@@ -1,3 +1,9 @@
+2003-03-20  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* seahorse.schemas.in: Added validity_threshold
+	* seahorse-recipients: Removed recips property, removed Add All and
+	Remove All, added validity checking using validity_threshold
+
 2003-03-19  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* src/Makefile.am: Patched to make freebsd-alpha port build.
